--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -2307,6 +2307,9 @@ min-width: 120px;}
 .hei7 {
     margin-top: 36px;
 }
+.hei10 {
+margin-bottom: 200.6px;
+}
 }
 @media (min-width: 992px) {
     .visible-md {
@@ -3167,6 +3170,10 @@ min-width: 180px;}
 .hei7 {
     margin-top: 46.5px;
 }
+
+.hei10 {
+margin-bottom: 263.5px;
+}
   
 }
 @media (min-width: 1200px) {
@@ -4005,6 +4012,9 @@ min-width: 180px;}
 .hei7 {
     margin-top: 60px;
 }
+.hei10 {
+margin-bottom: 340px;
+}
 }
 @media (min-width: 1340px) {
     .container {
@@ -4617,5 +4627,7 @@ min-width: 180px; }
 .hei7 {
     margin-top: 60px;
 }
-    
+.hei10 {
+margin-bottom: 340px;
+}
 }
