--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -6,9 +6,8 @@
  *
 */
 
-.pt1 {
-    text-align: right;
-}
+
+
 
 .container {
     margin-right: auto;
@@ -2310,6 +2309,16 @@ min-width: 120px;}
 .hei10 {
 margin-bottom: 200.6px;
 }
+.pt1 {
+    text-align: right;
+    margin-top: 50px;
+}
+.main-programs__blocks {
+    position: relative;
+    /*padding: 25px 0;*/
+    background-color: #f9f9f9;
+        margin-bottom: 50px;
+  }
 }
 @media (min-width: 992px) {
     .visible-md {
@@ -3174,7 +3183,16 @@ min-width: 180px;}
 .hei10 {
 margin-bottom: 263.5px;
 }
-  
+.pt1 {
+    text-align: right;
+    margin-top: 0px;
+}
+  .main-programs__blocks {
+    position: relative;
+    /*padding: 25px 0;*/
+    background-color: #f9f9f9;
+    margin-bottom: 0px;
+  }
 }
 @media (min-width: 1200px) {
     .menu {
@@ -4015,6 +4033,16 @@ min-width: 180px;}
 .hei10 {
 margin-bottom: 340px;
 }
+.pt1 {
+    text-align: right;
+    margin-top: 0px;
+}
+.main-programs__blocks {
+    position: relative;
+    /*padding: 25px 0;*/
+    background-color: #f9f9f9;
+    margin-bottom: 0px;
+  }
 }
 @media (min-width: 1340px) {
     .container {
