--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -377,6 +377,7 @@
 }
 .popup.is-active .popup-container {
     left: 0;
+    width: 90%;
 }
 /* s */
 
@@ -732,7 +733,7 @@ h2 {
 .categories {
     display: block;
 }
-.callback-trigger {
+/*.callback-trigger {
     display: block;
     width: 10px;
     height: 10px;
@@ -741,7 +742,7 @@ h2 {
     top: 95%;
     margin-top: -30px;
     background: url(../images/call-back-small.png);
-}
+}*/
 .footer-contacts__tel {
     padding: 0;
 }
@@ -1891,7 +1892,7 @@ body {
         width: calc(100% - 100px);
     }
     .form-row .label.big {
-        width: 92px;
+        width: 124px;
     }
     .form-row .label.big + .input {
         width: calc(100% - 190px);
@@ -2308,6 +2309,8 @@ min-width: 120px;}
 }
 .hei10 {
 margin-bottom: 200.6px;
+    position: relative;
+    z-index: 10;
 }
 .pt1 {
     text-align: right;
@@ -2319,6 +2322,18 @@ margin-bottom: 200.6px;
     background-color: #f9f9f9;
         margin-bottom: 50px;
   }
+  .zakaz-text {
+    margin-bottom: 29px;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.5;
+    color: #878787;
+}
+.popup-content h2 {
+    margin-bottom: 58px;
+    font-size: 36px;
+    color: #252525;
+}
 }
 @media (min-width: 992px) {
     .visible-md {
@@ -2761,7 +2776,7 @@ margin-bottom: 200.6px;
         width: calc(100% - 100px);
     }
     .form-row .label.big {
-        width: 119px;
+        width: 132px;
     }
     .form-row .label.big + .input {
         width: calc(100% - 190px);
@@ -3182,6 +3197,8 @@ min-width: 180px;}
 
 .hei10 {
 margin-bottom: 263.5px;
+    position: relative;
+    z-index: 10;
 }
 .pt1 {
     text-align: right;
@@ -3193,6 +3210,18 @@ margin-bottom: 263.5px;
     background-color: #f9f9f9;
     margin-bottom: 0px;
   }
+  .zakaz-text {
+    margin-bottom: 38px;
+    font-size: 18.6px;
+    font-weight: 300;
+    line-height: 1.5;
+    color: #878787;
+}
+.popup-content h2 {
+    margin-bottom: 76px;
+    font-size: 46.5px;
+    color: #252525;
+}
 }
 @media (min-width: 1200px) {
     .menu {
@@ -4032,6 +4061,8 @@ min-width: 180px;}
 }
 .hei10 {
 margin-bottom: 340px;
+    position: relative;
+    z-index: 10;
 }
 .pt1 {
     text-align: right;
@@ -4043,6 +4074,18 @@ margin-bottom: 340px;
     background-color: #f9f9f9;
     margin-bottom: 0px;
   }
+  .zakaz-text {
+    margin-bottom: 49px;
+    font-size: 24px;
+    font-weight: 300;
+    line-height: 1.5;
+    color: #878787;
+}
+.popup-content h2 {
+    margin-bottom: 98px;
+    font-size: 60px;
+    color: #252525;
+}
 }
 @media (min-width: 1340px) {
     .container {
@@ -4653,9 +4696,23 @@ min-width: 180px; }
 }
 
 .hei7 {
-    margin-top: 60px;
+    margin-top: 60px;x
 }
 .hei10 {
 margin-bottom: 340px;
+    position: relative;
+    z-index: 10;
+}
+.zakaz-text {
+    margin-bottom: 49px;
+    font-size: 24px;
+    font-weight: 300;
+    line-height: 1.5;
+    color: #878787;
+}
+.popup-content h2 {
+    margin-bottom: 98px;
+    font-size: 60px;
+    color: #252525;
 }
 }
