--- a/local/templates/main/template_styles.css
+++ b/local/templates/main/template_styles.css
@@ -7188,6 +7188,9 @@ a.button, a.button-white {
   overflow: hidden;
 }
 .popup {
+    -vendor-animation-duration: 3s;
+  -vendor-animation-delay: 2s;
+
   display: none;
   position: fixed;
   top: 0;
@@ -7267,7 +7270,7 @@ a.button, a.button-white {
   vertical-align: top;
   width: 70%;
   text-align: left;
-  overflow-y: auto; }
+  /*overflow-y: auto;*/ }
   .popup-content h2 {
     margin-bottom: 98px;
     font-size: 60px;
@@ -8760,12 +8763,32 @@ a.button, a.button-white {
 
 
 
-/*
-.popup-panel {
-	padding: 20px;
-	width: 250px;
-	background: #eeeeee;
-	border: #282828 2px solid;
+.basket-popup-button {
+    background: #fff;
+    position: fixed;
+    top: 50%;
+    left: 0;
+    margin-top: -30px;
+    margin-left: -80px;
+    padding: 20px 28px;
+    box-sizing: border-box;
+    text-align: center;
+    width: 220px;
+    height: 60px;
+    border: 1px solid #252525;
+    -webkit-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+    font-family: DINPro, Arial, sans-serif;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    font-weight: 300;
+    color: #252525;
+    text-transform: uppercase;
+    cursor: pointer;
 }
-*/
+
+.basket-popup-button span {
+    color: #878787;
+}
 
