--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -2312,6 +2312,8 @@ margin-bottom: 200.6px;
     position: relative;
     z-index: 10;
 }
+
+
 .pt1 {
     text-align: right;
     margin-top: 50px;
@@ -2371,6 +2373,50 @@ margin-bottom: 200.6px;
     height: 19px;
     background: -webkit-linear-gradient(top, transparent 32%, #252525 32%, #252525 47%, transparent 47%), -webkit-linear-gradient(left, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
     background: linear-gradient(to bottom, transparent 32%, #252525 32%, #252525 47%, transparent 47%), linear-gradient(to right, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+}
+.line_to {
+  width: 550px;
+  height: 1px;
+  background-color: #000000;
+  /*border: solid 1px #252525;*/
+  margin-top: 50px;
+}
+
+.cross_to {
+    content: '';
+    margin-top: -8px;
+    /* float: right; */
+    margin-left: 538px;
+    /* margin-left: -1px; */
+    width: 12px;
+    height: 19px;
+    background: -webkit-linear-gradient(top, transparent 32%, #252525 32%, #252525 47%, transparent 47%), -webkit-linear-gradient(left, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+    background: linear-gradient(to bottom, transparent 32%, #252525 32%, #252525 47%, transparent 47%), linear-gradient(to right, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+}
+.line_tree {
+  width: 550px;
+  height: 1px;
+  background-color: #000000;
+  /*border: solid 1px #252525;*/
+  margin-top: 85px;
+}
+
+.cross_tree {
+    content: '';
+    margin-top: -8px;
+    /* float: right; */
+    margin-right: 538px;
+    /* margin-left: -1px; */
+    width: 12px;
+    height: 19px;
+    background: -webkit-linear-gradient(top, transparent 32%, #252525 32%, #252525 47%, transparent 47%), -webkit-linear-gradient(left, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+    background: linear-gradient(to bottom, transparent 32%, #252525 32%, #252525 47%, transparent 47%), linear-gradient(to right, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+}
+.cross_tree_all{
+    float: right;
+    position: absolute;
+    top: 410px;
+    right: 0;
 }
 }
 @media (min-width: 992px) {
@@ -3298,6 +3344,50 @@ margin-bottom: 263.5px;
     background: -webkit-linear-gradient(top, transparent 32%, #252525 32%, #252525 47%, transparent 47%), -webkit-linear-gradient(left, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
     background: linear-gradient(to bottom, transparent 32%, #252525 32%, #252525 47%, transparent 47%), linear-gradient(to right, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
 }
+.line_to {
+  width: 600px;
+  height: 1px;
+  background-color: #000000;
+  /*border: solid 1px #252525;*/
+  margin-top: 52px;
+}
+
+.cross_to {
+    content: '';
+    margin-top: -8px;
+    /* float: right; */
+    margin-left: 588px;
+    /* margin-left: -1px; */
+    width: 12px;
+    height: 19px;
+    background: -webkit-linear-gradient(top, transparent 32%, #252525 32%, #252525 47%, transparent 47%), -webkit-linear-gradient(left, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+    background: linear-gradient(to bottom, transparent 32%, #252525 32%, #252525 47%, transparent 47%), linear-gradient(to right, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+}
+.line_tree {
+  width: 600px;
+  height: 1px;
+  background-color: #000000;
+  /*border: solid 1px #252525;*/
+  margin-top: 85px;
+}
+
+.cross_tree {
+    content: '';
+    margin-top: -8px;
+    /* float: right; */
+    margin-right: 588px;
+    /* margin-left: -1px; */
+    width: 12px;
+    height: 19px;
+    background: -webkit-linear-gradient(top, transparent 32%, #252525 32%, #252525 47%, transparent 47%), -webkit-linear-gradient(left, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+    background: linear-gradient(to bottom, transparent 32%, #252525 32%, #252525 47%, transparent 47%), linear-gradient(to right, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+}
+.cross_tree_all{
+    float: right;
+    position: absolute;
+    top: 550px;
+    right: 0;
+}
 }
 @media (min-width: 1200px) {
     .menu {
@@ -4200,6 +4290,50 @@ margin-bottom: 340px;
     background: -webkit-linear-gradient(top, transparent 32%, #252525 32%, #252525 47%, transparent 47%), -webkit-linear-gradient(left, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
     background: linear-gradient(to bottom, transparent 32%, #252525 32%, #252525 47%, transparent 47%), linear-gradient(to right, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
 }
+.line_to {
+  width: 780px;
+  height: 1px;
+  background-color: #000000;
+  /*border: solid 1px #252525;*/
+  margin-top: 85px;
+}
+
+.cross_to {
+    content: '';
+    margin-top: -8px;
+    /* float: right; */
+    margin-left: 768px;
+    /* margin-left: -1px; */
+    width: 12px;
+    height: 19px;
+    background: -webkit-linear-gradient(top, transparent 32%, #252525 32%, #252525 47%, transparent 47%), -webkit-linear-gradient(left, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+    background: linear-gradient(to bottom, transparent 32%, #252525 32%, #252525 47%, transparent 47%), linear-gradient(to right, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+}
+.line_tree {
+  width: 780px;
+  height: 1px;
+  background-color: #000000;
+  /*border: solid 1px #252525;*/
+  margin-top: 85px;
+}
+
+.cross_tree {
+    content: '';
+    margin-top: -8px;
+    /* float: right; */
+    margin-right: 768px;
+    /* margin-left: -1px; */
+    width: 12px;
+    height: 19px;
+    background: -webkit-linear-gradient(top, transparent 32%, #252525 32%, #252525 47%, transparent 47%), -webkit-linear-gradient(left, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+    background: linear-gradient(to bottom, transparent 32%, #252525 32%, #252525 47%, transparent 47%), linear-gradient(to right, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+}
+.cross_tree_all{
+    float: right;
+    position: absolute;
+    top: 675px;
+    right: 0;
+}
 }
 @media (min-width: 1340px) {
     .container {
@@ -4870,5 +5004,54 @@ min-width: 180px; }
     background: linear-gradient(to bottom, transparent 32%, #252525 32%, #252525 47%, transparent 47%), linear-gradient(to right, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
 }
 
+.line_to {
+  width: 780px;
+  height: 1px;
+  background-color: #000000;
+  /*border: solid 1px #252525;*/
+  margin-top: 85px;
 }
 
+.cross_to {
+    content: '';
+    margin-top: -8px;
+    /* float: right; */
+    margin-left: 768px;
+    /* margin-left: -1px; */
+    width: 12px;
+    height: 19px;
+    background: -webkit-linear-gradient(top, transparent 32%, #252525 32%, #252525 47%, transparent 47%), -webkit-linear-gradient(left, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+    background: linear-gradient(to bottom, transparent 32%, #252525 32%, #252525 47%, transparent 47%), linear-gradient(to right, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+}
+.line_tree {
+  width: 780px;
+  height: 1px;
+  background-color: #000000;
+  /*border: solid 1px #252525;*/
+  margin-top: 85px;
+}
+
+.cross_tree {
+    content: '';
+    margin-top: -8px;
+    /* float: right; */
+    margin-right: 768px;
+    /* margin-left: -1px; */
+    width: 12px;
+    height: 19px;
+    background: -webkit-linear-gradient(top, transparent 32%, #252525 32%, #252525 47%, transparent 47%), -webkit-linear-gradient(left, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+    background: linear-gradient(to bottom, transparent 32%, #252525 32%, #252525 47%, transparent 47%), linear-gradient(to right, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+}
+.cross_tree_all{
+    float: right;
+    position: absolute;
+    top: 675px;
+    right: 0;
+}
+
+}
+
+.hei11 {
+    position: relative;
+    z-index: 10;
+}
