--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -319,7 +319,7 @@
     background: #f9f9f9;
     width: 50%;
     position: absolute;
-    height: 209px
+    height: 187px
 }
 .bg4 {
     background: #f9f9f9;
@@ -361,6 +361,8 @@
     padding-left: 0px;
     padding-right: 0px;
 }
+
+
 .foo2 {
     margin-left: -15px;
 }
@@ -378,7 +380,8 @@
     height: 60px;
     position: fixed;
     right: 60px;
-    top: 86%;
+    /*top: 86%;*/
+    bottom: 60px;
     margin-top: -30px;
     background: url(../images/call-back.png);
 }
@@ -801,8 +804,8 @@ body {
     color: #000;
 }
 .icon-12 {
-    width: 12px;
-    height: 12px;
+    width: 13px;
+    height: 13px;
     position: relative;
     background-image: url(../images/sprite.png);
     display: inline-block;
@@ -810,8 +813,14 @@ body {
 .icon-fb {
     background-position: 0 0;
 }
-.icon-fb {
+.icon-fb:hover {
+    background-position: 0 -34px;
+}
+.icon-inst {
     background-position: 0 -17px;
+}
+.icon-inst:hover {
+    background-position: 0 -51px;
 }
 .wrapper {
     margin: 0 auto;
@@ -962,13 +971,7 @@ body {
 .menu:after {
     clear: both;
 }
-.headerAction {
-    font-size: 10px;
-    color: #252525;
-    /*padding-top: 2px;*/
-    
-    margin-top: -6px;
-}
+
 .headerAction a {
     color: #252525;
 }
@@ -1477,7 +1480,16 @@ body {
     .menu {
         padding-top: 6px;
         width: auto;
+        margin-left: -20px;
     }
+    
+    .headerAction {
+    font-size: 10px;
+    color: #252525;
+    /*padding-top: 2px;*/
+    margin-left: -20px;
+    margin-top: -6px;
+}
     /*.menu li {
     margin-left: 28px;
   }*/
@@ -1804,10 +1816,12 @@ body {
         text-transform: uppercase;
         text-align: center;
     }
+    /*
     .idea-advantages__item:hover,
     .idea-advantages__item:active {
         color: #64b357;
     }
+    */
     .idea-advantages__item:nth-child(3n) {
         margin-right: 0;
     }
@@ -2071,12 +2085,15 @@ body {
         height: 310px;
     }
     .carousel-inner > .item > img, .carousel-inner > .item > a > img {
-        line-height: 1;
-        width: 473px;
-        height: 310px;
-        position: absolute;
-        right: 0;
-    }
+    line-height: 1;
+    width: calc(50% + 120px);
+    width: -moz-calc(50% + 120px);
+    width: -webkit-calc(50% + 120px);
+    width: -webkit-calc(50% + 120px);
+    height: auto;
+    position: absolute;
+    right: 0;
+}
     .carousel-inner  {
         position: relative;
     }
@@ -2107,11 +2124,14 @@ body {
         font-stretch: normal;
         line-height: 1.62;
         color: #878787;
-        margin-top: 30px;
+        margin-top: 66px;
     }
     
     .carousel_background1 {
-        width: 100%;
+        width: calc(50% + 265px);
+        width: -moz-calc(50% + 265px);
+        width: -webkit-calc(50% + 265px);
+        width: -webkit-calc(50% + 265px);
         height: 456px;
         opacity: 0.5;
         background-color: #ffffff;
@@ -2160,6 +2180,15 @@ body {
         padding-left: 15px;
         padding-right: 15px;
    }
+    
+     .container4 {
+       width: 737px;
+        height: 187px;
+        margin-right: auto;
+        margin-left: auto;
+        padding-left: 15px;
+        padding-right: 15px;
+   }
    
    .container1 li {
        margin-right: 10px;
@@ -2196,7 +2225,8 @@ body {
     top: -3px;
 }
 .one_product_price_buy a {
-min-width: 120px;}
+min-width: 140px;
+    margin-left: 20px;}
 .one_product_price_buy {
   margin-bottom: 30px; }
   
@@ -2218,16 +2248,17 @@ min-width: 120px;}
   
   .bl_catalog_filter_right {
     float: right;
-    width: 301px;
+    width: 319px;
     border-left: 1px solid #d4d4d4;
     height: 90px;
     padding-top: 30px;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     text-align: right;
+    margin-right: -16px;
 }
 .bl_catalog_filter_left {
-    margin: 0 0px 0 66px;
+    margin: 0 0px 0 45px;
     padding-top: 40px;
     position: absolute;
 }
@@ -2338,9 +2369,8 @@ min-width: 120px;}
 .main-who__text h2 {
     margin-bottom: 10px;
 }
-/*.hei7 {
-    margin-top: 36px;*/
-}
+
+
 .hei10 {
 margin-bottom: 200.6px;
     position: relative;
@@ -2371,6 +2401,7 @@ margin-bottom: 200.6px;
     color: #252525;
 }
 .basket-item__remove {
+    padding-top: 3px;
     position: relative;
     margin-top: 104px;
     margin-right: -30px;
@@ -2391,17 +2422,17 @@ margin-bottom: 200.6px;
     cursor: pointer;
 }
 .line_one {
-  width: 318px;
+  width: 50%;
   height: 1px;
   background-color: #000000;
   /*border: solid 1px #252525;*/
-  margin-top: 32px;
+  margin-top: -133px;
 }
 .cross_one {
     content: '';
     margin-top: -8px;
     /* float: right; */
-    margin-left: 306px;
+    margin-left: 50%;
     /* margin-left: -1px; */
     width: 12px;
     height: 19px;
@@ -2468,10 +2499,34 @@ margin-bottom: 200.6px;
     font: 700 10px/30px DINPro, Arial, helvetika, sans-serif;
     position: relative;
     display: inline-block;
-    margin-left: 28px;
+    margin-left: 19px;
 }
+.bl_ind_cont {
+  margin-top: 54px;
+  /*padding-left: 110px; */
 }
+.cross_tree_all_for{
+    position: absolute;
+    top: 682px;
+}
+.mtop50 {
+    margin-top: 65px;
+}
+.siteHeader {
+        margin-bottom: 36px;
+}
+.hei6 {
+    margin-top: 72px;
+}
+.basket-item__remove:hover {
+      font-size: 13px;
+      background-position: 100% -22px; }
+}
+
 @media (min-width: 992px) {
+    .basket-item__remove:hover {
+      font-size: 14px;
+      background-position: 100% -22px; }
     .visible-md {
         display: block !important;
     }
@@ -2481,7 +2536,15 @@ margin-bottom: 200.6px;
     .menu {
         padding-top: 6px;
         width: auto;
+        margin-left: 3px;
     }
+    .headerAction {
+    font-size: 10px;
+    color: #252525;
+    /*padding-top: 2px;*/
+    margin-left: 3px;
+    margin-top: -6px;
+}
     /*.menu li {
     margin-left: 28px;
   }*/
@@ -2800,10 +2863,12 @@ margin-bottom: 200.6px;
         text-transform: uppercase;
         text-align: center;
     }
+    /*
     .idea-advantages__item:hover,
     .idea-advantages__item:active {
         color: #64b357;
     }
+    */
     .idea-advantages__item:nth-child(3n) {
         margin-right: 0;
     }
@@ -3068,12 +3133,15 @@ margin-bottom: 200.6px;
         height: 400px;
     }
     .carousel-inner > .item > img, .carousel-inner > .item > a > img {
-        line-height: 1;
-        width: 612px;
-        height: 400px;
-        position: absolute;
-        right: 0;
-    }
+    line-height: 1;
+    width: calc(50% + 130px);
+    width: -moz-calc(50% + 130px);
+    width: -webkit-calc(50% + 130px);
+    width: -webkit-calc(50% + 130px);
+    height: auto;
+    position: absolute;
+    right: 0;
+}
     
     .carousel-inner  {
         position: relative;
@@ -3105,11 +3173,14 @@ margin-bottom: 200.6px;
         font-stretch: normal;
         line-height: 1.62;
         color: #878787;
-        margin-top: 34px;
+        margin-top: 86px;
     }
     
     .carousel_background1 {
-        width: 100%;
+        width: calc(50% + 317px);
+        width: -moz-calc(50% + 317px);
+        width: -webkit-calc(50% + 317px);
+        width: -webkit-calc(50% + 317px);
         height: 456px;
         opacity: 0.5;
         background-color: #ffffff;
@@ -3158,6 +3229,14 @@ margin-bottom: 200.6px;
         padding-left: 15px;
         padding-right: 15px;
    }
+     .container4 {
+       width: 737px;
+        height: 187px;
+        margin-right: auto;
+        margin-left: auto;
+        padding-left: 15px;
+        padding-right: 15px;
+   }
    
    .container1 li {
        margin-right: 10px;
@@ -3193,7 +3272,8 @@ margin-bottom: 200.6px;
     top: -3px;
 }
 .one_product_price_buy a {
-min-width: 180px;}
+min-width: 180px;
+margin-left: -19px;}
 .one_product_price_buy {
   margin-bottom: 109px; }
   .one_product_char_header {
@@ -3222,9 +3302,10 @@ min-width: 180px;}
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     text-align: right;
+    margin-right: -16px;
 }
 .bl_catalog_filter_left {
-    margin: 0 0px 0 85px;
+    margin: 0 0px 0 34px;
     padding-top: 40px;
     position: absolute;
 }
@@ -3336,9 +3417,8 @@ min-width: 180px;}
     margin-bottom: 30px;
 }
 
-/*.hei7 {
-    margin-top: 46.5px;
-}*/
+
+
 
 .hei10 {
 margin-bottom: 263.5px;
@@ -3368,6 +3448,7 @@ margin-bottom: 263.5px;
     color: #252525;
 }
 .basket-item__remove {
+    padding-top: 3px;
     position: relative;
     margin-top: 104px;
     margin-right: -30px;
@@ -3388,17 +3469,18 @@ margin-bottom: 263.5px;
     cursor: pointer;
 }
 .line_one {
-  width: 410px;
+  width: 50%;
   height: 1px;
   background-color: #000000;
   /*border: solid 1px #252525;*/
   margin-top: 41px;
+  margin-top: -180px;
 }
 .cross_one {
     content: '';
     margin-top: -8px;
     /* float: right; */
-    margin-left: 398px;
+    margin-left: 50%;
     /* margin-left: -1px; */
     width: 12px;
     height: 19px;
@@ -3461,17 +3543,47 @@ margin-bottom: 263.5px;
 }
 .menu li {
     text-transform: uppercase;
-    font: 700 12px/30px DINPro, Arial, helvetika, sans-serif;
+    font: 700 11px/30px DINPro, Arial, helvetika, sans-serif;
     position: relative;
     display: inline-block;
-    margin-left: 28px;
+    margin-left: 19px;
 }
+.bl_ind_cont {
+  margin-top: 70px;
+  /*padding-left: 110px; */
+}
+
+.cross_tree_all_for{
+    position: absolute;
+    top: 764px;
+}
+
+.mtop50 {
+    margin-top: 85px;
+}
+.siteHeader {
+        margin-bottom: 46.5px;
+}
+
 }
 @media (min-width: 1200px) {
+    .basket-item__remove:hover {
+      font-size: 15px;
+      background-position: 100% -22px; }
     .menu {
         padding-top: 6px;
         width: auto;
+        margin-left: 18px;
     }
+    
+    .headerAction {
+    font-size: 10px;
+    color: #252525;
+    /*padding-top: 2px;*/
+    margin-left: 18px;
+    margin-top: -6px;
+}
+    
     .visible-lg {
         display: block !important;
     }
@@ -3776,10 +3888,12 @@ margin-bottom: 263.5px;
         text-transform: uppercase;
         text-align: center;
     }
+    /*
     .idea-advantages__item:hover,
     .idea-advantages__item:active {
         color: #64b357;
     }
+    */
     .idea-advantages__item:nth-child(3n) {
         margin-right: 0;
     }
@@ -4045,12 +4159,15 @@ margin-bottom: 263.5px;
         height: 516px;
     }
     .carousel-inner > .item > img, .carousel-inner > .item > a > img {
-        line-height: 1;
-        width: 790px;
-        height: 516px;
-        position: absolute;
-        right: 0;
-    }
+    line-height: 1;
+    width: calc(50% + 149px);
+    width: -moz-calc(50% + 149px);
+    width: -webkit-calc(50% + 149px);
+    width: -webkit-calc(50% + 149px);
+    height: auto;
+    position: absolute;
+    right: 0;
+}
     
     .carousel-inner  {
         position: relative;
@@ -4074,7 +4191,7 @@ margin-bottom: 263.5px;
     }
     
     .carousel_content1 p {
-        width: 400px;
+        width: 400px;       
         font-family: GothamPro;
         font-size: 21px;
         font-weight: 300;
@@ -4082,11 +4199,14 @@ margin-bottom: 263.5px;
         font-stretch: normal;
         line-height: 1.62;
         color: #878787;
-        margin-top: 43px;
+        margin-top: 109px;
     }
     
     .carousel_background1 {
-        width: 100%;
+        width: calc(50% + 380px);
+        width: -moz-calc(50% + 380px);
+        width: -webkit-calc(50% + 380px);
+        width: -webkit-calc(50% + 380px);       
         height: 456px;
         opacity: 0.5;
         background-color: #ffffff;
@@ -4135,6 +4255,14 @@ margin-bottom: 263.5px;
         padding-left: 15px;
         padding-right: 15px;
    }
+     .container4 {
+       width: 737px;
+        height: 187px;
+        margin-right: auto;
+        margin-left: auto;
+        padding-left: 15px;
+        padding-right: 15px;
+   }
    
    .container1 li {
        margin-right: 10px;
@@ -4170,7 +4298,8 @@ margin-bottom: 263.5px;
     top: -3px;
 }
 .one_product_price_buy a {
-min-width: 180px;}
+min-width: 220px;
+    margin-left: -10px;}
 .one_product_price_buy {
   margin-bottom: 109px; }
   .one_product_char_header {
@@ -4199,9 +4328,10 @@ min-width: 180px;}
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     text-align: right;
+    margin-right: -16px;
 }
 .bl_catalog_filter_left {
-    margin: 0 0px 0 110px;
+    margin: 0 0px 0 75px;
     padding-top: 40px;
     position: absolute;
 }
@@ -4309,9 +4439,8 @@ min-width: 180px;}
 .main-who__text h2 {
     margin-bottom: 50px;
 }
-/*.hei7 {
-    margin-top: 60px;*/
-}
+
+
 .hei10 {
 margin-bottom: 340px;
     position: relative;
@@ -4340,8 +4469,9 @@ margin-bottom: 340px;
     color: #252525;
 }
 .basket-item__remove {
+    padding-top: 3px;
     position: relative;
-    /*margin-top: 104px;*/
+    margin-top: 109px;
     margin-right: -104px;   
     width: 100px;
     height: 23px;
@@ -4360,17 +4490,17 @@ margin-bottom: 340px;
     cursor: pointer;
 }
 .line_one {
-  width: 528px;
+  width: 50%;
   height: 1px;
   background-color: #000000;
   /*border: solid 1px #252525;*/
-  margin-top: 53px;
+      margin-top: -237px;
 }
 .cross_one {
     content: '';
     margin-top: -8px;
     /* float: right; */
-    margin-left: 516px;
+    margin-left: 50%;
     /* margin-left: -1px; */
     width: 12px;
     height: 19px;
@@ -4438,8 +4568,62 @@ margin-bottom: 340px;
     display: inline-block;
     margin-left: 28px;
 }
+.bl_ind_cont {
+  margin-top: 90px;
+  /*padding-left: 110px; */
 }
+.cross_tree_all_for{
+    position: absolute;
+    top: 800px;
+}
+.carousel-inner > .item > img, .carousel-inner > .item > a > img {
+    line-height: 1;
+    width: calc(50% + 149px);
+    width: -moz-calc(50% + 149px);
+    width: -webkit-calc(50% + 149px);
+    width: -webkit-calc(50% + 149px);
+    height: auto;
+    position: absolute;
+    right: 0;
+}
+.mtop50 {
+    margin-top: 109px;
+}
+.siteHeader {
+        margin-bottom: 60px;
+}
+}
+
 @media (min-width: 1340px) {
+    .basket-item__remove:hover {
+      font-size: 15px;
+      background-position: 100% -22px; }
+    .siteHeader {
+        margin-bottom: 60px;
+}
+
+    .bl_catalog_filter_left {
+    margin: 0 0px 0 40px;
+    padding-top: 40px;
+    position: absolute;
+}
+    .mtop50 {
+    margin-top: 109px;
+}
+    
+    .menu {
+        padding-top: 6px;
+        width: auto;
+        margin-left: 23px;
+    }
+    
+    .headerAction {
+    font-size: 10px;
+    color: #252525;
+    /*padding-top: 2px;*/
+    margin-left: 23px;
+    margin-top: -6px;
+}
     .container {
         width: 1280px;
     }
@@ -4550,10 +4734,12 @@ margin-bottom: 340px;
         text-transform: uppercase;
         text-align: center;
     }
+    /*
     .idea-advantages__item:hover,
     .idea-advantages__item:active {
         color: #64b357;
     }
+    */
     .idea-advantages__item:nth-child(3n) {
         margin-right: 0;
     }
@@ -4824,12 +5010,15 @@ margin-bottom: 340px;
     }
     
     .carousel-inner > .item > img, .carousel-inner > .item > a > img {
-        line-height: 1;
-        width: 790px;
-        height: 516px;
-        position: absolute;
-        right: 0;
-    }
+    line-height: 1;
+    width: calc(50% + 162px);
+    width: -moz-calc(50% + 162px);
+    width: -webkit-calc(50% + 162px);
+    width: -webkit-calc(50% + 162px);
+    height: auto;
+    position: absolute;
+    right: 0;
+}
     
     .carousel-inner  {
         position: relative;
@@ -4862,17 +5051,21 @@ margin-bottom: 340px;
         font-stretch: normal;
         line-height: 1.62;
         color: #878787;
-        margin-top: 43px;
+        margin-top: 109px;
     }
     
     .carousel_background1 {
-        width: 100%;
+        width: calc(50% + 412px);
+        width: -moz-calc(50% + 412px);
+        width: -webkit-calc(50% + 412px);
+        width: -webkit-calc(50% + 412px);
         height: 456px;
         opacity: 0.5;
         background-color: #ffffff;
         position: absolute;
         bottom: 0;
         z-index:10;
+       
     }
     
     .hei8 {
@@ -4935,7 +5128,8 @@ margin-bottom: 340px;
     top: -3px;
 }
 .one_product_price_buy a {
-min-width: 180px; }
+min-width: 220px;
+margin-left: -10px;}
 
 .one_product_price_buy {
   margin-bottom: 109px; }
@@ -4973,6 +5167,14 @@ min-width: 180px; }
         padding-left: 15px;
         padding-right: 15px;
    }
+     .container4 {
+       width: 737px;
+        height: 187px;
+        margin-right: auto;
+        margin-left: auto;
+        padding-left: 15px;
+        padding-right: 15px;
+   }
    
    .bl_catalog_filter_right {
     float: right;
@@ -4983,10 +5185,11 @@ min-width: 180px; }
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     text-align: right;
+    margin-right: -16px;
     }
     
     .bl_catalog_filter_left {
-    margin: 0 0px 0 110px;
+    margin: 0 0px 0 93px;
     padding-top: 40px;
     position: absolute;
     }
@@ -5056,9 +5259,8 @@ min-width: 180px; }
     margin-bottom: 50px;
 }
 
-/*.hei7 {
-    margin-top: 60px;
-}*/
+
+
 
 .hei10 {
     margin-bottom: 340px;
@@ -5078,6 +5280,7 @@ min-width: 180px; }
     color: #252525;
 }
 .basket-item__remove {
+    padding-top: 3px;
     position: relative;
     /*margin-top: 104px;*/
     margin-right: -104px;   
@@ -5098,18 +5301,18 @@ min-width: 180px; }
     cursor: pointer;
 }
 .line_one {
-  width: 528px;
+  width: 50%;
   height: 1px;
   background-color: #000000;
   /*border: solid 1px #252525;*/
-  margin-top: 53px;
+      margin-top: -237px;
 }
 
 .cross_one {
     content: '';
     margin-top: -8px;
     /* float: right; */
-    margin-left: 516px;
+    margin-left: 50%;
     /* margin-left: -1px; */
     width: 12px;
     height: 19px;
@@ -5178,9 +5381,34 @@ min-width: 180px; }
     font: 700 12px/30px DINPro, Arial, helvetika, sans-serif;
     position: relative;
     display: inline-block;
-    margin-left: 28px;
+    margin-left: 40px;
+}
+.bl_ind_cont {
+  margin-top: 90px;
+  /*padding-left: 110px; */
 }
 
+.cross_tree_all_for{
+    position: absolute;
+    top: 800px;
+}
+.container2 {
+    width: 1250px;
+    height: 90px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+    .container4 {
+    width: 1250px;
+    height: 187px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+    
 }
 
 .hei11 {
@@ -5188,6 +5416,10 @@ min-width: 180px; }
     z-index: 10;
 }
 
-.siteHeader {
-        margin-bottom: 60px;
+.hei14 {
+    margin-bottom:60px;
+}
+
+.fo1 {
+        margin-left: 0px;
 }
